Change tilte to testing

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
       "explorer": [
         {
           "id": "zowe.explorer",
-          "name": "Data Sets"
+          "name": "Data Sets Testing"
         },
         {
           "id": "zowe.uss.explorer",
